buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath 'com.google.cloud.tools:appengine-gradle-plugin:_'
    }
}

plugins {
    id 'com.github.johnrengelman.shadow'
    id 'application'
    id 'java'
}
apply plugin: 'com.google.cloud.tools.appengine'

def appVersion = '2.0.0'
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
mainClassName = 'net.vexelon.currencybg.srv.Main'

repositories {
    maven {
        url 'https://maven-central.storage.googleapis.com'
    }
    mavenCentral()
    jcenter()
}

dependencies {
    implementation 'com.google.appengine:appengine-api-1.0-sdk:_',
            'com.google.firebase:firebase-admin:_',
            'io.vertx:vertx-web:_',
            'io.vertx:vertx-web-client:_',
            'commons-io:commons-io:_',
            'commons-beanutils:commons-beanutils:_',
            'org.apache.commons:commons-lang3:_',
            'org.apache.commons:commons-configuration2:_',
            'org.apache.httpcomponents:httpasyncclient:_',
            'org.slf4j:slf4j-reload4j:_',
            'org.slf4j:slf4j-api:_',
            'com.google.guava:guava:_',
            'com.google.code.gson:gson:_',
            'org.jsoup:jsoup:_',
            'com.github.pengrad:java-telegram-bot-api:_',
            'org.ogce:xpp3:_',
            'com.sparkpost:sparkpost-lib:_'

    testImplementation Testing.junit4,
            'com.google.appengine:appengine-testing:+',
            'com.google.appengine:appengine-api-stubs:+',
            'com.google.appengine:appengine-tools-sdk:+'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    doLast {
        shadowJar
    }
}

shadowJar {
    mergeServiceFiles()
}

appengine {
    stage.artifact = "${buildDir}/libs/${project.name}-all.jar"
    deploy {
        projectId = GCP_PROJECT_ID
        version = "v1"
    }
}